# cloudey-backend

./: .env.example  .gitignore  README.md  pyproject.toml  setup_langgraph.py
app/: agents.py  dashboard.py  demo_middleware.py  detailed_costs.py  logging_config.py  main.py  models.py  prompts.py  recommendations_engine.py  scheduler.py  sysconfig.py
app/cache/: __init__.py  cost_cache_manager.py  cost_rollover.py  redis_cache.py
app/cloud/: cache.py  comparison.py
app/cloud/aws/: __init__.py  pricing_client.py
app/cloud/oci/: ai_cache_tools.py  block_storage.py  cache_warming.py  client.py  compartment.py  compute.py  config.py  database.py  file_storage.py  load_balancer.py  metrics_sync.py  monitoring.py  object_storage.py  optimization.py  postgresql.py  pricing_client.py  rate_limiter.py  resource_sync.py  tools.py  usage_api_client.py
app/db/: conversations.db-shm  conversations.db-wal  cost_cache_crud.py  crud.py  database.py  init_schema.sql  metrics_crud.py  resource_crud.py
app/utils/: encryption.py
